--- a/templates/products/products-detail.html
+++ b/templates/products/products-detail.html
@@ -29,6 +29,18 @@
 			<h7>Publicado em 29/04/2020 às 17:09</h7>
 		</div>
 
+		<div>
+                    {% for message in messages %}
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+
+                    {% endfor %}
+		</div>
+
 		<div class="d-flex align-items-center">
 			<div class="">
 				{% if is_favourite %}
