--- a/templates/base.html
+++ b/templates/base.html
@@ -217,6 +217,8 @@
   <script type="text/javascript" src="{% static 'js/jquery-1.2.6.pack.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/jquery.maskedinput-1.1.4.pack.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/senha.js' %}"></script>
+
 </body>
 
 </html>
