--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -20,8 +20,38 @@
                 <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form|bootstrap }}
+
+                    <div hidden id="div-senha-fraca">
+
+                        <p> Informe uma Senha com ao menos 8 digitos com letras e numeros para continuar </p>
+                        <p> Senha Fraca </p>
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+
+                    <div hidden id="div-senha-media">
+                        <p> Senha Média </p>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+
+                    <div hidden id="div-senha-forte">
+                        <p> Senha Forte </p>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+
+                    <div hidden id="div-senha-excelente">
+                        <p> Senha Excelente </p>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
                     <div class="mt-4">
-                        <button type="submit" class="btn btn-primary btn-block botao-redondo"> Cadastre-se
+                        <button type="submit" id="btnCadastro" class="btn btn-primary btn-block botao-redondo"> Cadastre-se
                         </button>
                     </div>
                 </form>
@@ -41,5 +71,6 @@
             </div>
         </div>
     </section>
+
 
     {% endblock %}
