--- a/templates/user/avaliar.html
+++ b/templates/user/avaliar.html
@@ -6,7 +6,47 @@
 
 {% block main %}
 
-<body>
+
+<style>
+  
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+
+/* Styling h1 and links
+––––––––––––––––––––––––––––––––– */
+h1[alt="Simple"] {color: white;}
+a[href], a[href]:hover {color: grey; font-size: 0.5em; text-decoration: none}
+
+
+body
+{
+ /* background: #4a4a4c !important;  */
+}
+
+.starrating > input {display: none;}  /* Remove radio buttons */
+
+.starrating > label:before { 
+  content: "\f005"; /* Star */
+  margin: 2px;
+  font-size: 2em;
+  font-family: FontAwesome;
+ /* display: inline-block;  */
+}
+
+.starrating > label
+{
+  color: #222222; /* Start color when not clicked */
+}
+
+.starrating > input:checked ~ label
+{ color: #ffca08 ; } /* Set yellow color when star checked */
+
+.starrating > input:hover ~ label
+{ color: #ffca08 ;  } /* Set yellow color when star hover */
+
+
+
+</style>
+<body class="container my-4">
     
     <h1>Avaliação</h1>
 <h1>Avalie sua experiencia com {{ usuario }} !</h1>
@@ -14,19 +54,19 @@
   <form action="/rating/avaliar/{{idAvalia}}/submit" method="POST"> 
 <!-- <form action="submit" method="POST"> -->
     {% csrf_token %}
-  <textarea type="text" id="textlocador" name="text" placeholder="Descreva a sua experiencia!"></textarea><br>
+  <textarea type="text" id="textlocador" class="container d-flex justify-content-center" maxlength="300" name="text" placeholder="Descreva a sua experiencia!"></textarea><br>
  
-
-    <input type="radio" id="star5" name="rate" value="5" /><label for="star5" title="Rocks!">5 stars</label>
-    <input type="radio" id="star4" name="rate" value="4" /><label for="star4" title="Pretty good">4 stars</label>
-    <input type="radio" id="star3" name="rate" value="3" /><label for="star3" title="Meh">3 stars</label>
-    <input type="radio" id="star2" name="rate" value="2" /><label for="star2" title="Kinda bad">2 stars</label>
-    <input type="radio" id="star1" name="rate" value="1" /><label for="star1" title="Sucks big time">1 star</label>
-
+<div class="starrating risingstar d-flex justify-content-center flex-row-reverse">
+    <input type="radio" id="star5" name="rate" value="5" /><label for="star5" title="cinco estrelas"></label>
+    <input type="radio" id="star4" name="rate" value="4" /><label for="star4" title="quatro estrelas"></label>
+    <input type="radio" id="star3" name="rate" value="3" /><label for="star3" title="tres estrelas"></label>
+    <input type="radio" id="star2" name="rate" value="2" /><label for="star2" title="duas estrelas"></label>
+    <input type="radio" id="star1" name="rate" value="1" /><label for="star1" title="uma estrela"></label>
+</div>
 
    <!--  <input type="submit" value="Submit">   -->
  <!--  <button type="submit" id="submit">Avaliar</button>  -->
-    <button>Avaliar</button> 
+    <button class="btn btn-primary">Avaliar</button> 
     
 </form> 
 
