--- a/templates/products/produtosRequisitados.html
+++ b/templates/products/produtosRequisitados.html
@@ -4,6 +4,18 @@
 
 {% block main %}
     <div class="container">
+
+        <div>
+                    {% for message in messages %}
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+
+                    {% endfor %}
+        </div>
     <div class="row">
        {% for alugado in alugados %}
             {% if alugado.confirmado %}
