correção no tamanho do campo mensagem

--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -18,7 +18,7 @@
 
         <br>
 
-        <input type="text" id="mensagem" name="mensagem" size="80"><br>
+        <input type="text" id="mensagem" name="mensagem" maxlength="80" size="80"><br>
         <button type="submit" id="submit">Enviar</button>
         <output id="identificador"> {{ identificador }} </output>
 
