data de publicacao do produto e no historico aluguel

--- a/templates/products/products-detail.html
+++ b/templates/products/products-detail.html
@@ -26,7 +26,7 @@
 	<div class="row justify-content-between col-lg-9 col-12">
 
 		<div class="mt-2 text-secondary">
-			<h7>Publicado em 29/04/2020 às 17:09</h7>
+			<h7>Publicado em {{ product.date }}</h7>
 		</div>
 
 		<div>
