--- a/templates/user/historicoStatus.html
+++ b/templates/user/historicoStatus.html
@@ -31,6 +31,7 @@
             {% if historico.status == 4 %}
                 <li class="list-group-item">Status: encerrado</li>  
            {% endif %}
+    <li class="list-group-item">Data: {{historico.date}}</li>
   
 </ul>
 <br>
