correcao do exportar conversa

--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -5,7 +5,7 @@
 
 {% block main %}
 
-<a href="{% url 'exportarpdf' room_name user.id %}"> Exportar Conversa </a>
+<a href="{% url 'exportarpdf' room_name  %}"> Exportar Conversa </a>
 
     <form method="POST" action="submit" enctype="multipart/form-data">
 
