--- a/templates/pesquisa/pesquisa.html
+++ b/templates/pesquisa/pesquisa.html
@@ -5,141 +5,204 @@
 
 {% block main %}
 
-<section id="section-home-pesquisar" class="container-fluid bg-light pt-4 pb-1">
+<section id="section-home-pesquisar" class="container-fluid bg-light pb-4">
     <div class="container">
+
+        <div class="row my-4 col-12 categoria" id="divCategorias">
+
+            <div onclick="selecionarCategoria('Ferramentas', 'divFerramentas')" id="divFerramentas"
+                class="col-md-2 col-6 text-center mt-3">
+                <a class="pesquisa-categoria">
+                    <img src="{% static 'images/icone-ferramentas.png' %}" alt="icone ferramenta">
+                    <br>
+                    <p class="m-0">Ferramentas</p>
+                </a>
+            </div>
+
+            <div id="divModa" onclick="selecionarCategoria('Moda e Beleza', 'divModa')"
+                class="col-md-2 col-6 text-center mt-3">
+                <a class="pesquisa-categoria">
+                    <img src="{% static 'images/icone-roupa.png' %}" alt="icone roupa">
+                    <br>
+                    <p class="m-0">Moda e Beleza</p>
+                </a>
+            </div>
+
+            <div id="divEle" onclick="selecionarCategoria('Eletrônicos', 'divEle')"
+                class="col-md-2 col-6 text-center mt-3">
+                <a class="pesquisa-categoria">
+                    <img src="{% static 'images/icone-eletronico.png' %}" alt="icone eletronico">
+                    <br>
+                    <p class="m-0">Eletrônicos</p>
+                </a>
+            </div>
+
+            <div onclick="selecionarCategoria('Automóveis', 'divAuto')" id="divAuto"
+                class="col-md-2 col-6 text-center mt-3">
+                <a class="pesquisa-categoria">
+                    <img src="{% static 'images/icone-carro.ico' %}" alt="icone carro">
+                    <br>
+                    <p class="m-0">Automóveis</p>
+                </a>
+            </div>
+
+            <div onclick="selecionarCategoria('Construção', 'divConst')" id="divConst"
+                class="col-md-2 col-6 text-center mt-3">
+                <a class="pesquisa-categoria">
+                    <img src="{% static 'images/icone-construcao.ico' %}" class="mb-2" alt="icone Construção">
+                    <br>
+                    <p class="m-0">Construção</p>
+                </a>
+            </div>
+
+            <div onclick="selecionarCategoria('Agro e Indústria', 'divAgro')" id="divAgro"
+                class="col-md-2 col-6 text-center mt-3">
+                <a class="pesquisa-categoria">
+                    <img src="{% static 'images/icone-industria.ico' %}" alt="icone Indústria">
+                    <br>
+                    <p class="m-0">Agro e Indústria</p>
+                </a>
+            </div>
+        </div>
+
         <form method="POST" action="" enctype="multipart/form-data">
             {% csrf_token %}
 
+            <div class="d-none d-md-block">
+                <input hidden value="{{categoria}}" name="categoria" id="categoriaSelecionada">
+
+                <span class="input-group-append">
+                    <input type="text" maxlength="100" value="{{nome}}" class="form-control" name="nome"
+                        id="nomePesquisa">
+                    <button type="submit" class="btn btn-primary py-0 px-3">
+                        <img src="{% static 'images/icone-lupa.png' %}" style="width: 30px;" alt="icone lupa">
+                    </button>
+                </span>
+            </div>
+
+
+    </div>
+
+</section>
+
+<section class="container-fluid p-md-5 p-3 ml-md-5">
+    <div class="row ml-md-5">
+
+        <div class="col-md-3 col-12">
+
+            <div class="bg-light ml-md-5 mr-md-4 p-5" style="border-radius: 20px; color: rgb(74, 74, 74);">
+                <div class="text-center">
+                    <h5>Estado</h5>
+                </div>
+                <div>
+                    <select class="custom-select mt-2 mb-4" name="estado" id="estado"></select>
+                </div>
+                <div class="text-center">
+                    <h5>Cidade</h5>
+                </div>
+                <div>
+                    <select class="custom-select" name="cidade" id="cidade"></select>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="d-md-none d-block col-12 mt-4 mb-5">
             <input hidden value="{{categoria}}" name="categoria" id="categoriaSelecionada">
-
-            <div>
-                <select class="custom-select mt-2 mb-4 col-4" name="estado" id="estado"></select>
-            </div>
-            <div>
-                <select class="custom-select col-4" name="cidade" id="cidade"></select>
-            </div>
-
-            <br>
 
             <span class="input-group-append">
                 <input type="text" maxlength="100" value="{{nome}}" class="form-control" name="nome" id="nomePesquisa">
                 <button type="submit" class="btn btn-primary py-0 px-3">
-                    <img src="{% static 'images/icone-lupa.png' %}" style="width: 40px;" alt="icone lupa">
+                    <img src="{% static 'images/icone-lupa.png' %}" style="width: 30px;" alt="icone lupa">
                 </button>
             </span>
-            <form>
-
-                <div class="row my-4 col-12" id="divCategorias" style="border-radius: 20px; color: rgb(74, 74, 74);">
-
-                    <div onclick="selecionarCategoria('Ferramentas', 'divFerramentas')" id="divFerramentas" class="col-md-2 col-6 text-center tamanho-hover mt-3">
-                        <a >
-                            <img src="{% static 'images/icone-ferramentas.png' %}" style="width: 60px;" alt="icone ferramenta">
-                            <br>
-                            <p class="m-0" style="color: black;">Ferramentas</p>
-                        </a>
-                    </div>
-
-                    <div id="divModa" onclick="selecionarCategoria('Moda e Beleza', 'divModa')" class="col-md-2 col-6 text-center tamanho-hover mt-3">
-                        <a>
-                            <img src="{% static 'images/icone-roupa.png' %}" style="width: 60px;" alt="icone roupa">
-                            <br>
-                            <p class="m-0" style="color: black;">Moda e Beleza</p>
-                        </a>
-                    </div>
-
-                    <div id="divEle" onclick="selecionarCategoria('Eletrônicos', 'divEle')" class="col-md-2 col-6 text-center tamanho-hover mt-3">
-                        <a>
-                            <img src="{% static 'images/icone-eletronico.png' %}" style="width: 60px;" alt="icone eletronico">
-                            <br>
-                            <p class="m-0" style="color: black;">Eletrônicos</p>
-                        </a>
-                    </div>
-
-                    <div onclick="selecionarCategoria('Automóveis', 'divAuto')" id="divAuto" class="col-md-2 col-6 text-center tamanho-hover mt-3">
-                        <a>
-                            <img src="{% static 'images/icone-carro.ico' %}" style="width: 60px;" alt="icone carro">
-                            <br>
-                            <p class="m-0" style="color: black;">Automóveis</p>
-                        </a>
-                    </div>
-
-                    <div onclick="selecionarCategoria('Construção', 'divConst')" id="divConst" class="col-md-2 col-6 text-center tamanho-hover mt-3">
-                        <a>
-                            <img src="{% static 'images/icone-construcao.ico' %}" style="width: 60px; margin-bottom: 9px;" alt="icone Construção">
-                            <br>
-                            <p class="m-0" style="color: black;">Construção</p>
-                        </a>
-                    </div>
-
-                    <div onclick="selecionarCategoria('Agro e Indústria', 'divAgro')" id="divAgro" class="col-md-2 col-6 text-center tamanho-hover mt-3">
-                        <a>
-                            <img src="{% static 'images/icone-industria.ico' %}" style="width: 60px;" alt="icone Indústria">
-                            <br>
-                            <p class="m-0" style="color: black;">Agro e Indústria</p>
-                        </a>
-                    </div>
-</section>
-
-<section class="container mt-5">
-    <div class="row p-md-5 py-4 pl-3">
-
-        {% for product in products %}
-        <div class="col-md-3 col-6 mb-4 aumentar-tamanho-mouse">
-            <a href="{% url 'detail_product' product.id %}">
-                <image src="{{ product.get_photo_url }}" class="rounded tamanho-fixo-imagens"> </image>
-                <p class="mt-2 mb-1 ml-1">{{ product.nome }}</p>
-                <p class="m-0 ml-1" style="font-size: 20px;"><strong>R$ {{ product.preco }}</strong></p>
-            </a>
         </div>
-        {% endfor %}
+
+        </form>
+        
+        <div class="row col-md-7 col-12">
+
+            {% for product in products %}
+            <div class="col-12 mb-4" style="border-bottom: 1px solid #DADADA">
+
+                <a class="texto-item" href="{% url 'detail_product' product.id %}">
+
+                    <div class="row col-12 p-3">
+
+                        <image src="{{ product.get_photo_url }}" class="rounded tamanho-imagens-pesquisa"> </image>
+
+                        <div class="row col-md-9 col-8 align-content-between">
+                            <p class="col-md-9 col-7 texto-item-nome ">{{ product.nome }}</p>
+
+                            <p class="col-md-3 col-7" style="font-size: 20px;"><strong>R$ {{ product.preco }}</strong></p>
+
+                            <p class="col-md-9 col-6 align-self-md-end">{{ product.estado }}<span>, {{ product.cidade }}</span></p>
+
+                            <p class="col-md-3 col-12">{{ product.date }}</p>
+                        </div>
+
+
+                    </div>
+                </a>
+
+
+            </div>
+            {% endfor %}
+
+        </div>
     </div>
-    {% include 'pesquisa/pagination.html' with page=products %}
+
+    <div class="row mt-3 justify-content-center">
+        <div>
+            {% include 'pesquisa/pagination.html' with page=products %}
+        </div>
     </div>
+
 </section>
 
 <script language="JavaScript" type="text/javascript" charset="utf-8">
-      document.getElementById("nomePesquisa").placeholder = 'Estou procurando por...';
+    document.getElementById("nomePesquisa").placeholder = 'Estou procurando por...';
 
-      if (document.getElementById("categoriaSelecionada").value == 'Ferramentas'){
+    if (document.getElementById("categoriaSelecionada").value == 'Ferramentas') {
         document.getElementById('divFerramentas').style.borderStyle = 'inset';
-      } else if (document.getElementById("categoriaSelecionada").value == 'Moda e Beleza'){
+    } else if (document.getElementById("categoriaSelecionada").value == 'Moda e Beleza') {
         document.getElementById('divModa').style.borderStyle = 'inset';
-      } else if (document.getElementById("categoriaSelecionada").value == 'Eletrônicos'){
+    } else if (document.getElementById("categoriaSelecionada").value == 'Eletrônicos') {
         document.getElementById('divEle').style.borderStyle = 'inset';
-      } else if (document.getElementById("categoriaSelecionada").value == 'Automóveis'){
+    } else if (document.getElementById("categoriaSelecionada").value == 'Automóveis') {
         document.getElementById('divAuto').style.borderStyle = 'inset';
-      } else if (document.getElementById("categoriaSelecionada").value == 'Construção'){
+    } else if (document.getElementById("categoriaSelecionada").value == 'Construção') {
         document.getElementById('divConst').style.borderStyle = 'inset';
-      } else if (document.getElementById("categoriaSelecionada").value == 'Agro e Indústria'){
+    } else if (document.getElementById("categoriaSelecionada").value == 'Agro e Indústria') {
         document.getElementById('divAgro').style.borderStyle = 'inset';
-      }
+    }
 
 
-      function selecionarCategoria(categoriaSelecionada, div){
-        if (document.getElementById("categoriaSelecionada").value == categoriaSelecionada){
-           document.getElementById("categoriaSelecionada").value = '';
-           removerBordas();
+    function selecionarCategoria(categoriaSelecionada, div) {
+        if (document.getElementById("categoriaSelecionada").value == categoriaSelecionada) {
+            document.getElementById("categoriaSelecionada").value = '';
+            removerBordas();
         } else {
             document.getElementById("categoriaSelecionada").value = categoriaSelecionada;
             removerBordas();
             document.getElementById(div).style.borderStyle = 'inset';
         }
 
-      }
+    }
 
-      function removerBordas(){
-         document.getElementById('divFerramentas').style.border = 'none';
-         document.getElementById('divModa').style.border = 'none';
-         document.getElementById('divEle').style.border = 'none';
-         document.getElementById('divAuto').style.border = 'none';
-         document.getElementById('divConst').style.border = 'none';
-         document.getElementById('divAgro').style.border = 'none';
+    function removerBordas() {
+        document.getElementById('divFerramentas').style.border = 'none';
+        document.getElementById('divModa').style.border = 'none';
+        document.getElementById('divEle').style.border = 'none';
+        document.getElementById('divAuto').style.border = 'none';
+        document.getElementById('divConst').style.border = 'none';
+        document.getElementById('divAgro').style.border = 'none';
 
-      }
-      new dgCidadesEstados({
+    }
+    new dgCidadesEstados({
         cidade: document.getElementById('cidade'),
         estado: document.getElementById('estado')
-      }, '{{estado}}', '{{cidade}}')
+    }, '{{estado}}', '{{cidade}}')
 </script>
 
 {% endblock %}
