--- a/templates/products/my-products.html
+++ b/templates/products/my-products.html
@@ -42,10 +42,10 @@
 
                     <div id="publicados" class="collapse show" role="tabpanel" data-parent="#produtos">
 
-                        <div class="row">
+                        <div class="row mt-3">
 
                             {% for product in products %}
-                            <div class="col-md-3 rounded pb-3 ml-3 pt-2 mr-3 mt-3 mt-md-0"
+                            <div class="col-md-3 rounded pb-3 ml-md-5 ml-3 pt-2 mr-4 mt-3 mb-5 mt-md-0"
                                 style="border:1px solid #ccc">
 
                                 <image src="{{ product.get_photo_url }}"
